# qwen-web-api-proxy

./: .gitignore  AGENTS.md  LICENSE  README-EN.md  README.md  pyproject.toml  start-proxy.sh
browser-extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.content.config.ts  vite.main.config.ts
browser-extension/src/: content_script.ts  page_script.js  service_worker.ts
browser-extension/src/lib/: dom_helper.ts  poller.ts  qwen_api.ts  sse_handler.ts  tool_calling.ts  types.ts  ws_bridge.ts
browser-extension/src/popup/: popup.css  popup.html  popup.ts
docs/superpowers/plans/: 2026-07-11-api-direct-integration-plan.md  2026-07-11-api-interception-plan.md  2026-07-12-multi-extension-pool.md
docs/superpowers/specs/: 2026-07-11-api-direct-integration.md  2026-07-11-api-interception-design.md  2026-07-12-multi-extension-pool-design.md
proxy_server/: __main__.py  config.py
proxy_server/server/: api.py  auth.py  openai_format.py  response_formats.py  ws_manager.py
