[project]
name = "qwen-web-api-proxy"
version = "1.0.0"
description = "Qwen Web Chat → OpenAI API proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_unimported = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["dist/", "__pycache__/"]
